--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+img{
+  width:150px;
+  height:160px;
+  border-radius: 50%;
+}
 body {
   width: 100%;
   height: 100vh;
@@ -28,25 +32,25 @@ h1 span {
   transform-origin: left;
   animation: in 0.5s forwards;
 }
-h1 span:nth-child(1) {
+h3 span:nth-child(1) {
   animation-delay: 0.1s;
 }
-h1 span:nth-child(2) {
+h3 span:nth-child(2) {
   animation-delay: 0.2s;
 }
-h1 span:nth-child(3) {
+h3 span:nth-child(3) {
   animation-delay: 0.3s;
 }
-h1 span:nth-child(4) {
+h3 span:nth-child(4) {
   animation-delay: 0.4s;
 }
-h1 span:nth-child(5) {
+h3 span:nth-child(5) {
   animation-delay: 0.5s;
 }
-h1 span:nth-child(6) {
+h3 span:nth-child(6) {
   animation-delay: 0.6s;
 }
-h1 span:nth-child(7) {
+h3 span:nth-child(7) {
   animation-delay: 0.7s;
 }
 
@@ -59,4 +63,19 @@ h1 span:nth-child(7) {
     opacity: 1;
     transform: translateY(0) rotate(0);
   }
+}
+
+h3 {
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+h3 span {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(20px) rotate(90deg);
+  transform-origin: left;
+  animation: in 0.5s forwards;
 }
